src/tests/snapshots/nyx__tests__window_opening__check_target_size@omT-ofT-dhF500-b-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BN\nconfig:\nwindow-rule {\n    open-maximized true\n    open-floating true\n    default-window-height { fixed 500; }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1272 × 712, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1272 × 712, states: [Fullscreen, Activated]

unfullscreen configure:
size: 0 × 0, bounds: 1272 × 712, states: [Activated]
